<resources>
    <string name="app_name">Instagram</string>

    <string name="username_label">Username</string>
    <string name="password_label">Password</string>

    <string name="login_label">Login</string>
    <string name="signup_label">Sign Up</string>
    <string name="logout_label">Log Out</string>

    <string name="picture_label">Take Picture</string>
    <string name="retake_picture_label">Retake Picture</string>
    <string name="post_label">Post</string>
    <string name="caption_hint">Description...</string>

    <string name="home_item_label">Home</string>
    <string name="post_item_label">Post</string>
    <string name="profile_item_label">Profile</string>

    <string name="filler_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et iaculis mauris, non blandit purus. Nunc vitae pharetra orci. Maecenas iaculis hendrerit purus, a volutpat mi faucibus vel.</string>
    <string name="filler_username">setivega</string>>
    <string name="filler_time">5 hrs ago</string>

    <string name="add_profile_image">Add Profile Image</string>
    <string name="change_profile_image">Change Profile Image</string>
</resources>