<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:title="@string/home_item_label"
        android:icon="@drawable/home_icon_state"
        android:iconTint="@null"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_post"
        android:icon="@drawable/post_icon_state"
        android:title="@string/post_item_label"
        android:iconTint="@null"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile_icon_state"
        android:title="@string/profile_item_label"
        android:iconTint="@null"
        app:showAsAction="always" />
</menu>